titulo quien soy
Modifique texto de cuadro "quien soy"

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
             <img width="350" class=" img-fluid m-0 imgen-lu" src="./img/IMG_5327.png"  alt="Lucila imagen cv">
           </div>
           <div class="parrafo-lu">
-            <p class="texto-quienes_somos"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad doloremque, cupiditate nulla tenetur necessitatibus fuga. Officia molestias ullam in quam, repudiandae et dolorum, vel eum dignissimos consectetur sequi laudantium error.</p>
+            <p class="texto-quienes_somos"> Aprender me motiva constantemente a buscar desafíos.
+              La empatía es la principal herramienta que poseo para relacionarme con los demás.
+              Comprometida y responsable.</p>
           </div>
       </section>
 
